# SSII2018_Tutorial_Open3D

./: CMakeLists.txt  NumPy_and_Open3D.ipynb  README.md  bun000.pcd  kdtree.py  keypoint_matching.py
Python/: kdtree.py  keypoint_matching.py  normal_estimation.py  rgbd_and_pcd.py
data/: bun.pcd  bun045.pcd  d415.json  d435.json  sr300.json
src/: rs-capture.cpp
